--- a/main.css
+++ b/main.css
@@ -20,18 +20,17 @@ button {
 
 #nav {
     background-color: orange;
-    position: absolute;
-    clear: both;
     width: 100%;
-    display: inline;
     color: white;
     padding: 20px;
     font-family: sans-serif;
     font-size: 20px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 100px;
 }
 
 #nav a {
-    float: right;
     color: white;
     text-decoration: none;
     padding-right: 40px;
@@ -42,7 +41,7 @@ button {
 }
 
 #nav span {
-    margin-left: 30px;
+    margin-left: 60px;
 }
 
 #ultimate {
@@ -50,19 +49,20 @@ button {
 }
 
 #boxContainer {
-    display: inline-block;
-    margin: 125px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .box {
     background-color: white;
-    float: left;
     margin: 5px 5px;
     padding: 30px;
     height: 450px;
     width: 275px;
     border: 2px solid orange;
-    border-radius: 5px;   
+    border-radius: 5px;
 }
 
 .box h3 {
